# Jabber-mod_perl

./: Changes  MANIFEST  META.yml  Makefile.PL  README  mod_perl.pm
examples/: MyEcho.pm  MyStamp.pm
lib/Jabber/: NADs.pod  pkt.pod
patches/: NADs.xs  mod_perl.c  mod_perl.h  pkt.xs
patches/jadperl/: Makefile.am  Makefile.in  jadperl.c  jadperl.h  main.c  mod_perl.c  mod_perl.h  pkt.c
tools/: start  stop
